# rag_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/json/: queried_tk_rf_flat.json  queried_tk_rf_tree.json  tk_rf_articles.jsonl  tk_rf_tree.json
data/processed/: Kodecs.md
dataset_creation/: create_flat_json.py  md_to_json.py  parse.py  query_generation.py
eval/: README.md  run_eval.py
eval/results/: eval_results_10.csv  eval_results_15.csv  eval_results_5.csv
src/: config.py  logger_config.py
src/agent/: agent.py  context.py  middlewares.py  rephraser.py  tools.py
src/api/: Dockerfile  deps.py  main.py  routers.py
src/db/: __init__.py  db.py  delete_db.py  get_top.py  init_db.py
src/frontend/: Dockerfile  app.js  index.html  nginx.conf  style.css
src/model/: device.py  inference.py  model.py
src/utils/: prompts.py
